--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ env:
     TARGET=Net462
     VERSION=Release
 
-install:
-   - curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-   - mono nuget.exe install NUnit.Runners -Version 3.5.0 -OutputDirectory testrunner
+#install:
+#   - curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+#   - mono nuget.exe install NUnit.Runners -Version 3.5.0 -OutputDirectory testrunner
 
 script:
   - ./build.sh
