--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ env:
     TARGET=Net462
     VERSION=Release
 
-#install:
-#   - curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+install:
+   - curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
 #   - mono nuget.exe install NUnit.Runners -Version 3.5.0 -OutputDirectory testrunner
 
 script:
