--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,16 @@
 # see travis-ci.org for details
 
 language: csharp
-os:
-  - linux
-  - osx
+solution: TestClient.sln
 
-env:
-  - SLN=TestClient.Net462.sln
-    TARGET=Net462
-    VERSION=Release
-
-install:
-   - curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-#   - mono nuget.exe install NUnit.Runners -Version 3.5.0 -OutputDirectory testrunner
+matrix:
+  include:
+    - dotnet:2.2
+      mono: none
+      os: osx
+    - dotnet:2.2
+      mono: none
+      os: linux
 
 script:
-  - ./build.sh
+  - dotnet restore
