--- a/TestClient/TestClient.csproj
+++ b/TestClient/TestClient.csproj
@@ -7,6 +7,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;DEBUG;DO_TCP</DefineConstants>
+    <NoWarn />
   </PropertyGroup>
 
   <ItemGroup>
