--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 image: Visual Studio 2019
 
 before_build:
-    nuget restore TestServer.sln
+    nuget restore TestClient.sln
 
 build:
-    project: TestServer.sln
+    project: TestClient.sln
